# tapirs

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  clippy.toml
.github/workflows/: bench-compare.yml  fuzz-diagnose.yml  fuzz-multi-seed.yml  maelstrom.yml  operator-lint.yml  operator-test-e2e.yml  operator-test.yml  test-combined-store.yml  test-s3.yml  test-surrealkv.yml  test.yml  testbed-docker-compose.yml  testbed-kube-operator-tls.yml  testbed-kube-operator.yml  testbed-kube.yml  testbed-solo.yml  testbed.yml
crates/maelstrom/: Cargo.toml
crates/maelstrom/src/: main.rs
docs/: README.md  ascii_arts.md  history.md  roadmap.md  view-change-data-complexity.md  view-change-unneeded-doviewchange-full-payload.md
docs/evaluate/: README.md  benefits.md  comparison.md  one-pager.md  usecases.md
docs/integrate/: README.md  choosing-consistency.md  rust-client-sdk-error-handling.md  rust-client-sdk-eventual-consistent-read.md  rust-client-sdk-internals.md  rust-client-sdk-ro-txn.md  rust-client-sdk-rw-txn.md  rust-client-sdk.md
docs/learn/: README.md  code-tour.md  paper-map.md
docs/learn/concepts/: README.md  client.md  consistency.md  discovery.md  ir.md  occ.md  resharding.md  storage.md  tapir.md
docs/learn/internals/: README.md  architecture-decisions.md  backup_and_restore.md  backup_and_restore_single_node_limitation.md  combined-store.md  discovery.md  failure-modes.md  ir-custom-extensions-compaction.md  ir-custom-extensions-versioned-record.md  ir-custom-extensions.md  ir-tapir-gotchas.md  protocol-ir-custom-extensions.md  protocol-tapir-custom-extensions.md  protocol-tapir-paper-extensions-truetime.md  protocol-tapir-paper-extensions.md  protocol-tapir.md  resharding.md  storage.md  testing.md  topology.md  view-change-doviewchange-always-delta.md
docs/learn/roadmap/: README.md  bounded-history-compaction.md  segment-install-startup-recovery.md  unified-manifest-write.md
docs/operate/: README.md  backup-restore-s3.md  backup-restore.md  cli-config.md  cli-reference.md  cli-tapi-admin.md  cli-tapi-client.md  cli-tapi-discovery.md  cli-tapi-node.md  cli-tapi-shard-manager.md  cli-tapi.md  cli-tapiadm-docker.md  cli-tapiadm.md  cli-tapictl-compact.md  cli-tapictl-merge.md  cli-tapictl-solo.md  cli-tapictl-split.md  cli-tapictl.md  getting-started-testbed-kube-operator.md  getting-started-testbed-kube.md  getting-started-testbed-prerequisites.md  getting-started-testbed-solo.md  getting-started-testbed.md  getting-started.md  monitoring.md  requirements.md  troubleshooting.md
docs/research/: unified_tapir_ir_storage.md
kubernetes/charts/tapirs-cluster/: Chart.yaml  values.yaml
kubernetes/charts/tapirs-operator/: Chart.yaml  values.yaml
kubernetes/operator/: .gitignore  Makefile  PROJECT  README.md  go.mod  go.sum
kubernetes/operator/cmd/: main.go
scripts/: bench-compare.sh  check-determinism.sh  check-no-cfg-test-helper-fns.py  collect-ci.sh  detect-fuzz-indeterminism.sh  fuzz-diagnose.sh  fuzz-multi-seed.sh  maelstrom-summary.sh  testbed-docker-compose.sh  testbed-kube-operator-s3.sh  testbed-kube-operator.sh  testbed-kube.sh  testbed-solo.sh  testbed.sh
scripts/bench-compare/: .gitignore  Dockerfile.pd  Dockerfile.tapir-bench  Dockerfile.tikv  docker-compose-tapir.yml  docker-compose-tikv.yml  entrypoint-delay.sh
scripts/bench-compare/pd-split/: go.mod  go.sum  main.go
src/: discovery.rs  lib.rs  mvcc_deprecated.rs  rng.rs  shard_manager_api.rs  store_defaults.rs
src/backup/: backup_cluster.rs  list_backups.rs  local.rs  mod.rs  restore.rs  storage.rs  types.rs
src/backup/s3backup/: mod.rs
src/bench/: cluster.rs  executor.rs  mixed.rs  mod.rs  ops.rs  ro_get.rs  ro_scan.rs  runner.rs  rw.rs  tapir_impl.rs  tikv_impl.rs  tikv_rw.rs  traits.rs  workload.rs  workload_gen.rs
src/discovery/: backend.rs  json.rs  mod.rs  tapir.rs
src/ir/: client.rs  inmem_versioned_ir_record_store.rs  ir_record_store.rs  message.rs  mod.rs  payload.rs  record.rs  replica.rs  shared_view.rs  view.rs
src/ir/inmem/: mod.rs  record.rs  record_payload.rs  versioned_ir_record_store.rs
src/ir/tests/: lock_server.rs
src/mvcc/: backend.rs  mod.rs  store.rs
src/mvcc/disk/: aligned_buf.rs  disk_io.rs  disk_store.rs  error.rs  faulty_disk_io.rs  gc.rs  integration_tests.rs  lsm.rs  manifest.rs  memory_io.rs  memtable.rs  mod.rs  s3_caching_io.rs  sstable.rs  vlog.rs
src/mvcc/surrealkvstore/: mod.rs  tests.rs
src/node/: admin_client.rs  mod.rs  node.rs  read_replica_shim.rs  types.rs
src/node/node/: add_read_replica.rs  add_replica.rs  add_replica_join.rs  backup_shard.rs  leave_shard.rs  mod.rs  remove_replica.rs  restore_shard.rs  (+2 more)
src/nodecluster/: backup_cluster.rs  clone_shard.rs  mod.rs  restore_cluster.rs
src/occ/: mod.rs  prepared.rs  quorum_read_scan_test.rs  store.rs  timestamp.rs  transaction.rs
src/remote_store/: backup_descriptor.rs  config.rs  cow_clone.rs  cross_shard_snapshot.rs  download.rs  manifest_store.rs  mod.rs  open_remote.rs  read_replica.rs  read_replica_refresh.rs  segment_store.rs  sync_to_remote.rs  upload.rs
src/sharding/: mod.rs
src/storage/: cli.rs  defaults.rs  mod.rs  types.rs
src/tapir/: client.rs  dns_shard_client.rs  dynamic_router.rs  key_range.rs  message.rs  mod.rs  quorum_read.rs  replica.rs  routing_client.rs  shard.rs  shard_client.rs  shard_manager.rs  shard_manager_catchup.rs  shard_manager_cdc.rs  shard_router.rs  timestamp.rs
src/tapirstore/: conformance.rs  min_prepare_times.rs  mod.rs  trait.rs  transactionlog.rs
src/testing/: cluster.rs  discovery.rs  ir_replica_conformance.rs  mod.rs
src/tls/: mod.rs  reload.rs
src/transport/: channel.rs  faulty_channel.rs  message.rs  mod.rs
src/unified/: cli.rs  ir_record.rs  manifest.rs  mod.rs  mvcc_backend.rs  mvcc_impl.rs  prepare_cache.rs  tapirstore.rs  types.rs  unified_memtable.rs  vlog.rs
src/util/: join_until.rs  mod.rs
(+291 files in other folders)
