[package]
name = "tapi-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "tapirs"

[[bin]]
name = "maelstrom"
required-features = ["maelstrom"]

[[bin]]
name = "tapi"

[features]
default = ["maelstrom"]
maelstrom = ["async-maelstrom", "async-trait"]
io-uring = ["dep:io-uring", "dep:socket2"]

[dependencies]
bitcode = { version = "0.4.0", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8.4"
rand_distr = "0.4"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3.28"
pin-project-lite = "0.2.9"
derive_more = "0.99.17"
async-maelstrom = { version = "0.1.2", optional = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
async-trait = { version = "0", optional = true }
libc = "0.2"
crc32fast = "1.3"
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }
socket2 = { version = "0.5", optional = true, features = ["all"] }

[dev-dependencies]
pprof = { version = "0.11.1", features = ["flamegraph"] }
tokio = { version = "1", features = ["test-util"] }

[profile.release]
debug-assertions = true
