[workspace]
members = ["crates/maelstrom"]

[package]
name = "tapi-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "tapirs"

[[bin]]
name = "tapi"

[[bin]]
name = "tapictl"

[[bin]]
name = "tapiadm"

[features]
default = []
io-uring = ["dep:io-uring", "dep:socket2"]
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]

[dependencies]
bitcode = { version = "0.4.0", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8.4"
rand_distr = "0.4"
# "full" feature list: https://docs.rs/tokio/latest/tokio/#feature-flags
# Excluded: fs (DiskStore uses std::fs + DiskIo::block_on, not async fs),
#           process (subprocess mgmt uses std::process::Command)
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "time", "sync", "macros", "signal"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3.28"
pin-project-lite = "0.2.9"
derive_more = "0.99.17"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
libc = "0.2"
crc32fast = "1.3"
rustls = { version = "0.23", features = ["ring", "std"], default-features = false, optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }
socket2 = { version = "0.5", optional = true, features = ["all"] }

[dev-dependencies]
pprof = { version = "0.11.1", features = ["flamegraph"] }
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }

[profile.release]
debug-assertions = true
