[package]
name = "tapi-maelstrom"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "maelstrom"
path = "src/main.rs"

[features]
combined-store = ["tapi-rs/combined-store"]

[dependencies]
tapi-rs = { path = "../.." }
async-maelstrom = "0.1.2"
async-trait = "0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures = "0.3.28"
